trying to fix footer on mobile devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -340,8 +340,8 @@ body, html {
 
 @media screen and (max-width: 768px) {
   .footer-background-photo {
-    background-image: none;
-    background: $standard-background-color;
+    background-image: none !important;
+    background: $standard-background-color !important;
     height: 50px;
   }
 }
